Fix T46285: "Select parent" if there is no parent doesn't work correctly.